fix: refactor social link styles for improved layout and readability

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -215,7 +215,10 @@ ul.row {
     color: var(--text-color);
 }
 
-.social-link svg {
+.social-link{
     display: block;
+}
+
+.social-link > svg {
     fill: var(--text-color);
 }
